Security & Access Rights Auditor/main/default/objects/OWD_Sharing_Report__c/fields/Managed_Package_License_Datails_7__c.field-meta.xml
<CustomField>
    <fullName>Managed_Package_License_Datails_7__c</fullName>
    <label>Managed Package License Datails 7</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>