Security & Access Rights Auditor/main/default/objects/OWD_Sharing_Report__c/fields/OWD_Data_Field__c.field-meta.xml
<CustomField>
    <fullName>OWD_Data_Field__c</fullName>
    <description>Will Hold the Data Related to OWD.</description>
    <label>OWD Data Field</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>