Security & Access Rights Auditor/main/default/objects/OWD_Sharing_Report__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <businessOwnerUser>james@applicationperfection.co.uk.development</businessOwnerUser>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
                <default>true</default>
                <label>--None--</label>
            </value>
            <value>
                <fullName>AllReports</fullName>
            </value>
            <value>
                <fullName>FilteredReport</fullName>
            </value>
            <value>
                <fullName>ListView</fullName>
            </value>
            <value>
                <fullName>ManagedPackaged</fullName>
            </value>
            <value>
                <fullName>OWDReport</fullName>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
            </value>
            <value>
                <fullName>ScheduledReports</fullName>
            </value>
            <value>
                <fullName>ValidationRules</fullName>
            </value>
            <value>
                <fullName>UserPermissionSetGroup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>