Security & Access Rights Auditor/main/default/objects/OWD_Sharing_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sharing_Rules_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Managed_Package_License_Datails__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>